--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "js",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "comment.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -12,11 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.3",
-    "sqlite3": "^5.1.7"
+    "mongoose": "^8.8.3"
   }
 }
